làm thông báo còn lỏ không thì k biết
THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬTTHANH NHẬT THANH NHẬT THANH NHẬT THANH NHẬTTHANH NHẬTTHANH NHẬT T

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,5 @@ encoding//src/main/webapp/WEB-INF/views/include/navigation.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/layouts/user-aside.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/productsByBrand.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/store.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/user/notifications/notification.jsp=UTF-8
 encoding/<project>=UTF-8
